# mdgreet

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  flake.nix  vm.nix
.github/workflows/: ci.yml  docs.yml
docs/: book.toml
docs/src/: SUMMARY.md  index.md
docs/src/dev/: architecture.md  i18n.md  setup.md  testing.md
docs/src/user/: config.md  greetd.md  installation.md
docs/src/user/config/: appearance.md  background.md  power.md  themes.md
docs/src/user/greetd/: nixos.md  standard.md
examples/: mdgreet.toml
nix/: i18n.nix  shell.nix  vm.nix
po/: de.po  es.po  fr.po  mdgreet.pot  ru.po
src/: cli.rs  config.rs  constants.rs  image_utils.rs  main.rs  theme.rs
src/app/: appearance.rs  auth.rs  background.rs  cache.rs  clock.rs  login.rs  mod.rs  power.rs  session.rs  state.rs  theme.rs
src/config/: appearance.rs  background.rs  logging.rs  mod.rs  power.rs  theme.rs
src/utils/: cache.rs  client.rs  i18n.rs  image.rs  logging.rs  mod.rs  paths.rs  system.rs  systems.rs
ui/: main.slint  style.slint
ui/components/: background.slint  bottom_sheet.slint  clock.slint  login.slint  password_field.slint  power_menu.slint  session_selector.slint  text_field.slint  user_selector.slint
