[package]
name = "mdgreet"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
clap = { version = "4.6.0", features = ["derive"] }
const_format = "0.2"
css-color-parser2 = "1.0.1"
dirs = "6.0.0"
figment = { version = "0.11.5", package = "figment2", features = ["toml"] }
greetd_ipc = { version = "0.10.3", features = ["tokio-codec"] }
image = "0.25.10"
libc = "0.2.186"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
slint = { version = "1.15.1", features = ["std"] }
toml = "1.1.2"

[build-dependencies]
slint-build = "1.15.1"

