[package]
name = "mdgreet"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
clap = { version = "4.6.0", features = ["derive"] }
const_format = "0.2"
css-color-parser2 = "1.0.1"
dirs = "6.0.0"
figment = { version = "0.11.5", package = "figment2", features = ["toml"] }
greetd_ipc = { version = "0.10.3", features = ["tokio-codec"] }
image = "0.25.10"
libc = "0.2.186"
lru = "0.18.0"
pwd = "1.4.0"
rustix = { version = "1.1.4", features = ["process"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
slint = { version = "1.15.1", features = ["std"] }
tokio = { version = "1.52.1", features = ["full"] }
toml = "1.1.2"
zbus = "5.15.0"

[build-dependencies]
slint-build = "1.15.1"

